Deployment  0_75e - data split 2 poc
