# server.js
@@ -20,6 +20,7 @@ const { getIPSBundleGeneric } = require('./servercontrollers/fetchips');
 const { getIPSLegacyBundle } = require('./servercontrollers/ipsBundleFormat_old');
 const { getIPSUnifiedBundle } = require('./servercontrollers/ipsBundleFormatUnified');
 const { getIPSUnifiedBundleSplit } = require('./servercontrollers/ipsBundleFormatUnifiedSplit');
+const { getIPSDataSplitPOC } = require('./servercontrollers/ipsDataSplitPOC');
 const { getIPSXMLBundle } = require('./servercontrollers/ipsXMLBundleFormat');
 const { getIPSRaw, getAllIPS, getAllIPSList } = require('./servercontrollers/ipsDatabaseFormats');
 const { getMongoFormatted } = require('./servercontrollers/ipsMongoDisplayFormat');
@@ -202,6 +203,7 @@ api.get("/ipsxml/:id", getIPSXMLBundle);
 api.get("/ipslegacy/:id", getIPSLegacyBundle);
 api.get("/ipsunified/:id", getIPSUnifiedBundle);
 api.get("/ipsunifiedsplit/:id", getIPSUnifiedBundleSplit);
+api.get("/ipsdatasplitpoc/:id", getIPSDataSplitPOC);
 api.get("/ipsbyname/:name/:given", getIPSBundleByName);
 api.get("/ips/search/:name", getIPSSearch);
 api.get('/fetchipsora/:name/:givenName', getORABundleByName);
